Header with side menu

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -3,10 +3,20 @@
 {% block content %}
 
 <div>
-    <div class="container">
-        Olar maius
-    <button type="button" class="btn btn-primary">Primary</button>
-      </div>
+    <!-- header -->
+    <!-- <div class="container-fluid">
+        <div class="row header justify-content-evenly align-items-center ">
+            <div class="col-lg-4">
+                <div class="p-3 border bg-light">col 1</div>                
+            </div>
+            <div class="col-lg-4 ">
+                <div class="p-3 border bg-light">col 2</div>
+            </div>
+        </div>
+    </div> -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>  
 </div>
 
 {% endblock content %}
