dashboard boards drag

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,4 @@
-<header > 
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-dark p-4">
-          <h5 class="text-white h4">Collapsed content</h5>
-          <span class="text-muted">Toggleable via the navbar brand.</span>
-        </div>
-    </div>       
+<header >        
     <div class="row header align-items-center header-container">
         <div class="col-lg-1  col-md-1   col-sm-1 text-nowrap menu-button-container">
             <div class="menu-button d-flex justify-content-center align-items-center" onclick="openNav()">
@@ -16,7 +10,7 @@
         </div>
 
         <div class="col-lg-5 offset-lg-1      col-md-6 offset-md-1        col-sm-6 offset-sm-1    text-nowrap title-div">
-            <h2 class="text-truncate">KanDo - kanban managment</h2>
+            <div><h2 class="text-truncate">KanDo - kanban managment</h2></div>
         </div>
 
         
