--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -3,20 +3,31 @@
 {% block content %}
 
 <div>
-    <!-- header -->
-    <!-- <div class="container-fluid">
-        <div class="row header justify-content-evenly align-items-center ">
-            <div class="col-lg-4">
-                <div class="p-3 border bg-light">col 1</div>                
-            </div>
-            <div class="col-lg-4 ">
-                <div class="p-3 border bg-light">col 2</div>
+    <div class="dashboard-container row align-items-center justify-content-start">
+
+        <div class="list-board-container 
+        draggable
+
+        ">
+            <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                <span>To Do</span>
             </div>
         </div>
-    </div> -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>  
+
+        <div class="list-board-container  draggable ui-state-default">
+            <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                <span>Doing</span>
+            </div>
+        </div>
+
+        <div class="list-board-container  draggable ui-state-default">
+            <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                <span>Done</span>
+            </div>
+        </div>
+
+
+    </div>
 </div>
 
 {% endblock content %}
