--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -2,10 +2,11 @@
     
 } */
 
-.list-board-container{
+.list-board-container{    
     margin: 15px;
     width: 300px;
-    height: 75vh;
+    /* height: 75vh; */
+    height: auto;
     background-color: skyblue;
     padding: 0;
     border-radius: 5px;
@@ -13,9 +14,13 @@
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);;
 }
 
+.fill-div{
+    height: 15px;
+}
+
 .title-list-board-container{
     width: inherit;
-    height: 10%;
+    height: 35px;
     background-color: yellowgreen;
     border-radius: inherit;
     
