--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -5,12 +5,12 @@
 <div>
     <div class="dashboard-container row align-items-center justify-content-start sortable">
 
-        <div class="list-board-container">
+        <div class="list-board-container droppable">
             <div class="title-list-board-container d-flex align-items-center justify-content-center">
                 <span>To Do</span>
             </div>
             
-            <div class="sortable list-items-board row align-items-center justify-content-center draggable" id="item-list-1">
+            <div class="sortable list-items-board row align-items-center justify-content-center draggable">
                 <div class="item-board">Vinicius</div>
                 <div class="item-board">Vieira</div>
             </div>
@@ -18,12 +18,12 @@
             <div class="fill-div"></div>
         </div>
 
-         <div class="list-board-container ">
+         <div class="list-board-container droppable">
             <div class="title-list-board-container d-flex align-items-center justify-content-center">
                 <span>To A Do</span>
             </div>
             
-            <div class="sortable list-items-board row align-items-center justify-content-center draggable" id="item-list-2">
+            <div class="sortable list-items-board row align-items-center justify-content-center draggable">
                 <div class="item-board">Vinicius</div>
                 <div class="item-board">Vieira</div>
             </div>
