--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -10,9 +10,9 @@
                 <span>To Do</span>
             </div>
             
-            <div class="sortable list-items-board row align-items-center justify-content-center draggable">
-                <div class="item-board">Vinicius</div>
-                <div class="item-board">Vieira</div>
+            <div class="sortable list-items-board row align-items-center justify-content-center">
+                <div class="item-board sortable">Carlos</div>
+                <div class="item-board sortable">Vieira</div>
             </div>
 
             <div class="fill-div"></div>
@@ -23,9 +23,9 @@
                 <span>To A Do</span>
             </div>
             
-            <div class="sortable list-items-board row align-items-center justify-content-center draggable">
-                <div class="item-board">Vinicius</div>
-                <div class="item-board">Vieira</div>
+            <div class="sortable list-items-board row align-items-center justify-content-center">
+                <div class="item-board ">Vinicius</div>
+                <div class="item-board ">Pain</div>
             </div>
 
             <div class="fill-div"></div>
