--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -7,6 +7,7 @@
     width: 300px;
     /* height: 75vh; */
     height: auto;
+    min-height: 50px;
     background-color: skyblue;
     padding: 0;
     border-radius: 5px;
