boards and items

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -3,19 +3,17 @@
 {% block content %}
 
 <div>
-    <div class="dashboard-container row align-items-center justify-content-start sortable">
+    <div class="dashboard-container row align-items-start justify-content-start sortable">
 
         <div class="list-board-container droppable">
             <div class="title-list-board-container d-flex align-items-center justify-content-center">
                 <span>To Do</span>
             </div>
             
-            <div class="sortable list-items-board row align-items-center justify-content-center">
+            <div class="sortable list-items-board  align-items-center justify-content-center">
                 <div class="item-board sortable">Carlos</div>
                 <div class="item-board sortable">Vieira</div>
             </div>
-
-            <div class="fill-div"></div>
         </div>
 
          <div class="list-board-container droppable">
@@ -23,17 +21,26 @@
                 <span>To A Do</span>
             </div>
             
-            <div class="sortable list-items-board row align-items-center justify-content-center">
+            <div class="sortable list-items-board flex-row align-items-center justify-content-center">
                 <div class="item-board ">Vinicius</div>
-                <div class="item-board ">Pain</div>
+                <div class="item-board sortable">Pain</div>
             </div>
 
-            <div class="fill-div"></div>
         </div>
 
-        
-        
+        <div class="list-board-container droppable">
+            <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                <span>AMrio</span>
+            </div>
+            
+            <div class="sortable list-items-board flex-row align-items-center justify-content-center">
+                <div class="item-board ">Cord</div>
+                <div class="item-board sortable">OLit</div>
+            </div>
 
+        </div>
+        
+        
 
     </div>
 </div>
