--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -10,7 +10,7 @@
                 <span>To Do</span>
             </div>
             
-            <div class="sortable list-items-board  align-items-center justify-content-center">
+            <div class="sortable list-items-board flex-row align-items-center justify-content-center">
                 <div class="item-board sortable">Carlos</div>
                 <div class="item-board sortable">Vieira</div>
             </div>
@@ -22,25 +22,29 @@
             </div>
             
             <div class="sortable list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board ">Vinicius</div>
+                <div class="item-board sortable">Vinicius</div>
                 <div class="item-board sortable">Pain</div>
             </div>
 
         </div>
 
-        <div class="list-board-container droppable">
+        <!-- <div class="list-board-container droppable">
             <div class="title-list-board-container d-flex align-items-center justify-content-center">
-                <span>AMrio</span>
+                <span>AMrioAMrioAMrioAMrioAMrioAMrioAMrioAMrioAMrio</span>
             </div>
             
             <div class="sortable list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board ">Cord</div>
-                <div class="item-board sortable">OLit</div>
+                <div class="item-board sortable">Cord</div>
+                <div class="item-board sortable">OLit AMrioA MrioAMrioAMrioAMrioAMrioAMrioAMrioAMrio</div>
             </div>
 
+        </div> -->
+        
+        <div class="list-board-plus">
+            <div class=" d-flex align-items-center justify-content-center">
+                <span>+</span>
+            </div>
         </div>
-        
-        
 
     </div>
 </div>
