--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -11,8 +11,8 @@
             </div>
             
             <div class="sortable list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board sortable">Carlos</div>
-                <div class="item-board sortable">Vieira</div>
+                <div class="item-board">Carlos</div>
+                <div class="item-board">Vieira</div>
             </div>
         </div>
 
@@ -22,11 +22,11 @@
             </div>
             
             <div class="sortable list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board sortable">Vinicius</div>
-                <div class="item-board sortable">Pain</div>
+                <div class="item-board  ">Vinicius</div>
+                <div class="item-board ">Pain</div>
             </div>
 
-        </div>
+        </div> 
 
         <!-- <div class="list-board-container droppable">
             <div class="title-list-board-container d-flex align-items-center justify-content-center">
@@ -38,13 +38,14 @@
                 <div class="item-board sortable">OLit AMrioA MrioAMrioAMrioAMrioAMrioAMrioAMrioAMrio</div>
             </div>
 
-        </div> -->
+        </div>
         
         <div class="list-board-plus">
             <div class=" d-flex align-items-center justify-content-center">
                 <span>+</span>
             </div>
         </div>
+    
 
     </div>
 </div>
