--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -2,7 +2,7 @@
     
 } */
 
-.list-board-container{    
+.list-board-container{ 
     margin: 15px;
     width: 300px;
     /* height: 75vh; */
@@ -65,7 +65,7 @@
     overflow: hidden;
 }
 
-.item-board:hover{
+/* .item-board:hover{
     background-color: rgba(255, 255, 0, 0.404);
 
-}
+} */
