--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -10,9 +10,9 @@
                 <span>To Do</span>
             </div>
             
-            <div class="sortable list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board">Carlos</div>
-                <div class="item-board">Vieira</div>
+            <div class="sortable list-items-board flex-row align-items-center justify-content-center ">
+                <div class="item-board">#####</div>
+                <div class="item-board">+++++</div>
             </div>
         </div>
 
@@ -21,9 +21,9 @@
                 <span>To A Do</span>
             </div>
             
-            <div class="sortable list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board  ">Vinicius</div>
-                <div class="item-board ">Pain</div>
+            <div class="sortable list-items-board flex-row align-items-center justify-content-center ">
+                <div class="item-board">$$$$$</div>
+                <div class="item-board">&&&&&</div>
             </div>
 
         </div> 
@@ -48,6 +48,6 @@
     
 
     </div>
-</div>
+</div>-->
 
 {% endblock content %}
