--- a/templates/main.html
+++ b/templates/main.html
@@ -41,27 +41,29 @@
           
           appendTo: "body",
           cursor: "grabbing",
-          // helper: "clone",        
-          helper: "original",        
+          helper: "clone",        
+          // helper: "original",        
           revert: "invalid",
           connectToSortable: ".list-items-board"     
         });
 
         $( ".sortable" ).sortable({ 
           revert: true,
-          // connectWith: ".list-items-board",  
-          helper: "original"
-          // grid: [ 20, 10 ] 
+          // connectWith: ".list-board-container",  
+          change: function(event, ui) {
+                // $(ui.placeholder).css('visibility', 'visible');
+                $(ui.placeholder).css('visibility', 'invisible');
+          }
         });
       
         $('.droppable').droppable({ // allows items to be dropped in
           tolerance: "intersect",
           accept:".item-board",
 
-          // drop: function(event, ui) {
-          //     // $(this).append($(ui.draggable));
-          //     $(this).append(ui.draggable);
-          // }
+          drop: function(event, ui) {
+              // $(this).append($(ui.draggable));
+              $(this).append(ui.draggable);
+          }
           
         })
       } );
