--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -5,49 +5,25 @@
 <div>
     <div class="dashboard-container row align-items-start justify-content-start sortable">
 
-        <div class="list-board-container droppable">
-            <div class="title-list-board-container d-flex align-items-center justify-content-center">
-                <span>To Do</span>
-            </div>
-            
-            <div class="sortable list-items-board flex-row align-items-center justify-content-center ">
-                <div class="item-board">#####</div>
-                <div class="item-board">+++++</div>
-            </div>
-        </div>
+        <div class="items-list">
+            <div id="drag-1" class="draggable">
+                <p> You can drag one element </p>
+              </div>
 
-         <div class="list-board-container droppable">
-            <div class="title-list-board-container d-flex align-items-center justify-content-center">
-                <span>To A Do</span>
+              <div id="drag-2" class="draggable">
+                <p> with each pointer </p>
             </div>
-            
-            <div class="sortable list-items-board flex-row align-items-center justify-content-center ">
-                <div class="item-board">$$$$$</div>
-                <div class="item-board">&&&&&</div>
-            </div>
-
-        </div> 
-
-        <!-- <div class="list-board-container droppable">
-            <div class="title-list-board-container d-flex align-items-center justify-content-center">
-                <span>AMrioAMrioAMrioAMrioAMrioAMrioAMrioAMrioAMrio</span>
-            </div>
-            
-            <div class="sortable list-items-board flex-row align-items-center justify-content-center">
-                <div class="item-board sortable">Cord</div>
-                <div class="item-board sortable">OLit AMrioA MrioAMrioAMrioAMrioAMrioAMrioAMrioAMrio</div>
-            </div>
-
         </div>
         
-        <div class="list-board-plus">
-            <div class=" d-flex align-items-center justify-content-center">
-                <span>+</span>
-            </div>
-        </div>
-    
+        <!--
+            https://sortablejs.github.io/Sortable/
+            https://interactjs.io/pro/#more-info
+        -->
+
+        
+          
 
     </div>
-</div>-->
+</div>
 
 {% endblock content %}
