--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -69,3 +69,29 @@
     background-color: rgba(255, 255, 0, 0.404);
 
 } */
+
+
+
+
+
+
+/* interact JS */
+#drag-1, #drag-2 {
+    width: 98%;
+    min-height: 10px;
+    background-color: #29e;
+    color: white;
+    border-radius: 0.75em;
+    padding: 4%;
+    touch-action: none;
+    user-select: none; /*- prevent user select text -*/
+    transform: translate(0px, 0px);
+    margin: 5px;
+  }
+
+
+  .items-list{
+    width: 250px;
+    min-height: 80px;
+    background-color: rgb(101, 102, 102);
+  }
