--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -4,26 +4,47 @@
 
 <div>
     <div class="dashboard-container row align-items-start justify-content-start sortable">
+       
 
-        <div class="items-list">
-            <div id="drag-1" class="draggable">
-                <p> You can drag one element </p>
-              </div>
-
-              <div id="drag-2" class="draggable">
-                <p> with each pointer </p>
+          <div class="list-board-container">
+            <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                <span>AAA</span>
+            </div>
+            
+            <div class="list-items-board flex-row align-items-center justify-content-center">
+                <div class="item-board">Carlos</div>
+                <div class="item-board">Vieira</div>
+                <div class="item-board">Antonmo</div>
+                <div class="item-board">fiSH</div>
             </div>
         </div>
-        
-        <!--
-            https://sortablejs.github.io/Sortable/
-            https://interactjs.io/pro/#more-info
-        -->
 
-        
+        <div class="list-board-container">
+            <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                <span>BBB</span>
+            </div>
+            
+            <div class="list-items-board flex-row align-items-center justify-content-center">
+                <div class="item-board">Rodolfo</div>
+                <div class="item-board">Pam</div>
+            </div>
+        </div>
+
+        <div class="list-board-container">
+            <div class="title-list-board-container d-flex align-items-center justify-content-center">
+                <span>CCC</span>
+            </div>
+            
+            <div class="list-items-board flex-row align-items-center justify-content-center">
+                <div class="item-board">MIcha</div>
+                <div class="item-board">LOAS</div>
+                <div class="item-board">OFius</div>
+            </div>
+        </div>                  
           
 
     </div>
+    
 </div>
 
 {% endblock content %}
